fix: side navigation mobile view

--- a/src/assets/styles/components/_side-navigation.scss
+++ b/src/assets/styles/components/_side-navigation.scss
@@ -30,6 +30,11 @@
     display: none;
   }
 
+  &__logo.link:not(.link--disabled):focus {
+      box-shadow: none;
+      outline: none;
+  }
+
   &--pin {
     position: relative;
     box-shadow: none;
